# deepRLalgos

./: .gitignore  README.md  notes.txt  pyproject.toml  setup.py  todo.txt
drl_algos/: __init__.py  data.json  eval_util.py  notes.txt  run.py  test.py  utils.py
drl_algos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drl_algos/algos/: __init__.py  algorithm.py  ppo.py  ppo_new.py  sac.py  sac_new.py
drl_algos/algos/Dreamer/: dreamer.py  reinforce.py  reinforce_distribution_cont.py  reinforce_dreamer.py  reinforce_dreamer2.py  reinforce_dreamer3.py  reinforce_dreamer_breakout.py  reinforce_dreamer_decodedObsOnly.py  reinforce_dreamer_decodedObsOnly2.py  reinforce_dreamer_discountOnly.py  reinforce_dreamer_noModel.py  (+22 more)
drl_algos/configs/: __init__.py  experiment_builder.py  experiment_builder2.py  sac.py
drl_algos/data/: __init__.py  conf.py  logging.py  logging2.py  my_logging.py  path_collector.py  path_collector_parallel.py  replay_buffer.py  rollout_buffer.py  rollouts.py
drl_algos/distributions/: __init__.py  distributions.py
drl_algos/networks/: __init__.py  actor.py  agents.py  base.py  critic.py  critics.py  dreamer.py  dreamer2.py  models.py  mydreamer.py  myrssm.py  mysimplemodel.py  mysimplemodel2.py  policies.py  policy.py  rssm.py
drl_algos/policies/: __init__.py  actor.py  agents.py  base.py  critic.py
drl_algos/trainers/: __init__.py  ere_trainer.py  trainer.py  trainer2.py  trainer3.py
drl_algos/utils/: __init__.py  buffers.py  buffers_new.py  config.py  distributions.py  eval_util.py  logging.py  utils.py
tests/: test_drl_algos.py
(+40 files in other folders)
