[tool.poetry]
name = "drl_algos"
version = "0.1.0"
description = "Deep Reinforcement Learning Algorithm Implementation"
authors = ["Nikolas Pitsillos npitsillos@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.1"
numpy = "^1.19.5"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tensorboard = "^2.4.1"

[tool.poetry.scripts]
train = "main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
